RESOLVED FIXED233775
Fix OOM crash in JSValue::toWTFStringForConsole
https://bugs.webkit.org/show_bug.cgi?id=233775
Summary Fix OOM crash in JSValue::toWTFStringForConsole
Saam Barati
Reported 2021-12-02 11:04:20 PST
...
Attachments
Patch (2.20 KB, patch)
2021-12-02 11:13 PST, Saam Barati
mark.lam: review+
patch for landing (2.22 KB, patch)
2021-12-02 11:24 PST, Saam Barati
no flags
Saam Barati
Comment 1 2021-12-02 11:04:50 PST
Radar WebKit Bug Importer
Comment 2 2021-12-02 11:05:13 PST
Saam Barati
Comment 3 2021-12-02 11:13:46 PST
Mark Lam
Comment 4 2021-12-02 11:15:53 PST
Comment on attachment 445748 [details] Patch r=me
Saam Barati
Comment 5 2021-12-02 11:24:55 PST
Created attachment 445753 [details] patch for landing
EWS
Comment 6 2021-12-02 16:12:59 PST
Committed r286462 (244803@main): <https://commits.webkit.org/244803@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 445753 [details].
Note You need to log in before you can comment on or make changes to this bug.