Fix OOM crash in JSValue::toWTFStringForConsole https://bugs.webkit.org/show_bug.cgi?id=233775 <rdar://85259423>

Reviewed by Mark Lam.

JSTests:

* stress/pretty-print-oom.js: Added.

Source/JavaScriptCore:

* runtime/JSCJSValue.cpp:
(JSC::JSValue::toWTFStringForConsole const):



Canonical link: https://commits.webkit.org/244803@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286462 268f45cc-cd09-0410-ab3c-d52691b4dbfc